--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> {% block title %} {% endblock title %} |本棚アプリ</title>
   <link rel="stylesheet" type="text/css" href="{% static 'book/css/style.css' %}">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" integrity="sha384-PJsj/BTMqILvmcej7ulplguok8ag4xFTPryRq8xevL7eBYSmpXKcbNVuy+P0RMgq" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css"
+    integrity="sha384-PJsj/BTMqILvmcej7ulplguok8ag4xFTPryRq8xevL7eBYSmpXKcbNVuy+P0RMgq" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
@@ -22,10 +23,10 @@
     </div>
     <div class="navbar-nav d-flex flex-row">
       {% if request.user.is_authenticated %}
-        <a class="nav-link mx-3" href="{% url 'accounts:logout' %}">ログアウト</a>
+      <a class="nav-link mx-3" href="{% url 'accounts:logout' %}">ログアウト</a>
       {% else %}
-        <a class="nav-link mx-3" href="{% url 'accounts:login' %}">ログイン</a>
-        <a class="nav-link mx-3" href="{% url 'accounts:signup' %}">アカウント作成</a>
+      <a class="nav-link mx-3" href="{% url 'accounts:login' %}">ログイン</a>
+      <a class="nav-link mx-3" href="{% url 'accounts:signup' %}">アカウント作成</a>
       {% endif %}
     </div>
   </nav>
